# LambdaCalc

./: LambdaCalc.cabal  README.md
app/: Main.hs
cpp/: .gitignore  LambdaCalc.vcxproj
cpp/include/: Expr.h  LambdaCalcGrammar.h
cpp/src/: Expr.cpp  Main.cpp
examples/: testLet.lc
src/: LambdaCalc.hs  Main.hs
src/LambdaCalc/: CallByNeed.hs  Closure.hs  Expr.hs  Lexer.x  Parser.y  Value.hs
test/: CallByNeedTest.hs  ParserTest.hs  Spec.hs  Test.hs
