name:                LambdaCalc
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/LambdaCalc#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  build-tools:
    alex,
    happy
    
  hs-source-dirs:      src
  default-language:    Haskell2010
  
  build-depends:       
    base >= 4.7 && < 5,
    array >= 0.5.2 && < 0.6

  exposed-modules:
    LambdaCalc
  
  Other-modules:       
    LambdaCalc.Lexer, 
    LambdaCalc.Parser,
    LambdaCalc.Value,
    LambdaCalc.Expr,
    LambdaCalc.CallByNeed

executable LambdaCalc
  main-is: Main.hs
  hs-source-dirs: app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      LambdaCalc,
      base >=4.7 && <5

  other-modules:
  default-language: Haskell2010


test-suite TestPrj-test
  type: exitcode-stdio-1.0
  main-is: Test.hs
  
  hs-source-dirs: test

  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  
  build-depends:
    LambdaCalc -any,
    base >=4.7 && <5,
    raw-strings-qq >= 1.1,
    HTF >= 0.13
    
        
  default-language: Haskell2010


